tests/ui/type-alias-impl-trait/issue-53398-cyclic-types.stderr
error[E0275]: overflow evaluating the requirement `Foo: Sized`
  --> $DIR/issue-53398-cyclic-types.rs:5:13
   |
LL | fn foo() -> Foo {
   |             ^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_53398_cyclic_types`)
   = note: required because it appears within the type `fn() -> Foo {foo}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
